--- a/PokerTables/Base.lproj/LaunchScreen.storyboard
+++ b/PokerTables/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_1" orientation="portrait">
+    <device id="ipad12_9rounded" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,22 +15,24 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="homebig.png" translatesAutoresizingMaskIntoConstraints="NO" id="Eff-CP-YTP">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="FUP-HX-Wgr">
-                                <rect key="frame" x="0.0" y="291" width="414" height="287"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="FUP-HX-Wgr">
+                                <rect key="frame" x="0.0" y="174" width="1024" height="398"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="FUP-HX-Wgr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="150" id="90E-4q-tUf"/>
+                            <constraint firstItem="FUP-HX-Wgr" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="N9Z-Jv-gwA"/>
                             <constraint firstAttribute="trailing" secondItem="Eff-CP-YTP" secondAttribute="trailing" id="PWl-hu-Bf4"/>
                             <constraint firstItem="Eff-CP-YTP" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="RcX-BU-WeF"/>
                             <constraint firstItem="Eff-CP-YTP" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="g8U-cP-J7I"/>
+                            <constraint firstItem="FUP-HX-Wgr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="iBA-Lz-8Yv"/>
                             <constraint firstAttribute="bottom" secondItem="Eff-CP-YTP" secondAttribute="bottom" id="u38-n4-1AG"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
